# StreamCam

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  client.cpp  device.cpp  device.h  sdl_check.h
Google_Test/: CMakeLists.txt
Server/: CMakeLists.txt  device.cpp  device.h  sdl_check.hpp  server.cpp
